# architecture-pro-warmhouse

./: README.md
apps/: docker-compose.yml  init.sh
apps/all_api_doc/gateway_api/: swagger.txt
apps/all_api_doc/smart_home/: swagger.yml
apps/all_api_doc/temperature_api/: swagger.yml
apps/device_service/: .dockerignore  Dockerfile  config.yml  init.sql  pyproject.toml  requirements.txt
apps/device_service/api_doc/: curl.txt  swagger.yml
apps/device_service/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
apps/device_service/app/api/: health.py
apps/device_service/app/api/v1/: devices.py
apps/gateway_api/: main.py
apps/gateway_api/api_doc/: curl.txt
apps/smart_home/: Dockerfile  init.sql  main.go
apps/smart_home/api_doc/: curl.txt
apps/temperature_api/: Dockerfile  main.py
apps/temperature_api/api_doc/: curl.txt
schemas/: 1_context_diagram_c4.puml  2_context_diagram_с4.puml  3_container_diagram.puml  4_components_diagram.puml  5_code_diagram.puml  6_er_diagramm_all.puml
